Fixed sizing on Mobile Screens

--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,7 @@ li a {
 	text-decoration: none;
 	font-family: Arial;
 	font-weight: bold;
-	font-size: 16px;
+	font-size: 100%;
 }
 
 .logo-button-click {
@@ -72,7 +72,7 @@ tr.stats-row:hover:not(.active) {
 section.attributes {
 	text-align: center;
 	font-family: Arial;
-	font-size: 16px;
+	font-size: 100%;
 }
 
 span.attributes {
@@ -81,7 +81,7 @@ span.attributes {
 }
 
 .name-number {
-	font-size: 32px;
+	font-size: 250%;
 	font-family: 'Oswald', sans-serif;
 	text-align: center;
 	font-weight: bold;
@@ -101,7 +101,7 @@ span.attributes {
 	padding-bottom: 20px;
 }
 
-.stat-section {
+.main-container {
 	background-color: #DDDDDD;
 	padding-right: 20px;
 	padding-left: 20px;
@@ -167,7 +167,7 @@ td {
 	padding-top: 13px;
 	font-family: Arial;
 	text-align: center;
-	font-size: 14px;
+	font-size: 100%;
 	border-bottom: 1px solid #ddd;
 }
 
@@ -183,12 +183,12 @@ td {
 
 .stats-heading {
 	font-family: 'Oswald', sans-serif;
-	font-size: 32px;
+	font-size: 250%;
 	text-transform: none;
 	text-align: center;
 }
 
-.stats-section {
+.sub-container {
 	background-color: white;
 	padding-top: 32px;
 	padding-bottom: 32px;
@@ -205,7 +205,7 @@ td {
 
 .roster-positions {
 	font-family: Montserrat;
-	font-size: 32px;
+	font-size: 250%;
 	align: left;
 }
 
